--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 		<ear-plugin-version>2.9</ear-plugin-version>
 		<ejb-plugin-version>2.3</ejb-plugin-version>
 		<ejb-spec-version>3.0</ejb-spec-version>
-		<wildfly-plugin-version>1.0.2.Final</wildfly-plugin-version>
+		<version.wildfly-maven-plugin>2.0.1.Final</version.wildfly-maven-plugin>
 		<antrun-plugin-version>1.7</antrun-plugin-version>
 		<vertx.version>3.5.0</vertx.version>
 		<source.version>1.8</source.version>
@@ -116,7 +116,7 @@
 				<plugin>
 					<groupId>org.wildfly.plugins</groupId>
 					<artifactId>wildfly-maven-plugin</artifactId>
-					<version>${wildfly-plugin-version}</version>
+					<version>${version.wildfly-maven-plugin}</version>
 					<configuration>
 						<skip>true</skip>
 					</configuration>
