--- a/qwanda-service-war/pom.xml
+++ b/qwanda-service-war/pom.xml
@@ -64,8 +64,7 @@
 		<project.oauth.version>1.19.0</project.oauth.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-		<drools.version>7.26.0.Final</drools.version>
-		<jbpm.version>7.26.0.Final</jbpm.version>
+		<kie.version>7.28.0.Final</kie.version>
 		<version.keycloak>7.0.0</version.keycloak>
 
 		<version.ee7>1.0.2.Final</version.ee7>
