--- a/qwanda-service-war/pom.xml
+++ b/qwanda-service-war/pom.xml
@@ -148,6 +148,14 @@
 					<groupId>org.apache.commons</groupId>
 					<artifactId>commons-compress</artifactId>
 				</exclusion>
+				<exclusion>
+			        <groupId>life.genny</groupId>
+			        <artifactId>qwanda-utils</artifactId>
+				</exclusion>
+				<exclusion>
+                    <groupId>javax.persistence</groupId>
+                    <artifactId>persistence-api</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 
