--- a/qwanda-service-war/pom.xml
+++ b/qwanda-service-war/pom.xml
@@ -34,7 +34,8 @@
 		<genny-verticle.version>${revision}</genny-verticle.version>
 
 
-		<version.org.wildfly>19.0.0.Final</version.org.wildfly>
+		<version.org.wildfly>18.0.1.Final</version.org.wildfly>
+		<version.jboss.bom>18.0.1.Final</version.jboss.bom>
 
 		<version.wildfly.maven.plugin>1.2.1.Final</version.wildfly.maven.plugin>
 		<compiler-plugin-version>3.1</compiler-plugin-version>
@@ -527,13 +528,6 @@
 			</exclusions>
 
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.wildfly/wildfly-client-properties -->
-<dependency>
-    <groupId>org.wildfly</groupId>
-    <artifactId>wildfly-client-properties</artifactId>
-    <version>${version.org.wildfly}</version>
-</dependency>
-		
 	</dependencies>
 
 	<dependencyManagement>
@@ -558,7 +552,7 @@
 			<!-- https://mvnrepository.com/artifact/org.wildfly.bom/wildfly-javaee7 -->
 			<dependency>
 				<groupId>org.wildfly.bom</groupId>
-				<artifactId>wildfly-jakartaee8</artifactId>
+				<artifactId>wildfly-javaee7</artifactId>
 				<version>${version.org.wildfly}</version>
 				<type>pom</type>
 			</dependency>
@@ -768,8 +762,8 @@
 						<java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
 						<!-- the maven dependency plugin will have already downloaded the server 
 							on /target -->
-						<jboss.home>${project.basedir}/target/wildfly-${version.org.wildfly}</jboss.home>
-						<module.path>${project.basedir}/target/wildfly-${version.org.wildfly}/modules</module.path>
+						<jboss.home>${project.basedir}/target/wildfly-17.0.1.Final</jboss.home>
+						<module.path>${project.basedir}/target/wildfly-17.0.1.Final/modules</module.path>
 					</systemPropertyVariables>
 					<redirectTestOutputToFile>false</redirectTestOutputToFile>
 				</configuration>
@@ -869,7 +863,7 @@
 
 		<!-- Arquillian WildFly remote profile -->
 		<profile>
-			<id>arq-wildfly-remote</id>
+			<id>arq-widlfly-remote</id>
 			<dependencies>
 				<dependency>
 					<groupId>org.wildfly</groupId>
