--- a/qwanda-service-war/pom.xml
+++ b/qwanda-service-war/pom.xml
@@ -116,7 +116,7 @@
 		</repository>
 		<repository>
 			<id>life.genny</id>
-			<url>http://nexus.outcome-hub.com/nexus/content/repositories/life.genny</url>
+            <url>http://nexus.outcome-hub.com/repository/life.genny/</url>
 		</repository>
 	</repositories>
 	<dependencies>
