--- a/qwanda-service-war/pom.xml
+++ b/qwanda-service-war/pom.xml
@@ -114,10 +114,10 @@
 			<id>JBoss repository</id>
 			<url>http://repository.jboss.org/nexus/content/groups/public-jboss/</url>
 		</repository>
-		<repository>
+		<!--repository>
 			<id>life.genny</id>
             <url>http://nexus.outcome-hub.com/repository/life.genny/</url>
-		</repository>
+		</repository-->
 	</repositories>
 	<dependencies>
 		<dependency>
