--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>life.genny</groupId>
 	<artifactId>wildfly-qwanda-service</artifactId>
-	<version>${revision}</version>
+	<version>7.1.0</version>
 	<packaging>pom</packaging>
 	<name>wildfly-qwanda-service</name>
 
