--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	</modules>
 
 	<properties>
-		<revision>7.2.0</revision>
+        <revision>${project.version}</revision>
 		<ear-plugin-version>2.9</ear-plugin-version>
 		<ejb-plugin-version>2.3</ejb-plugin-version>
 		<ejb-spec-version>3.0</ejb-spec-version>
