add env for kafka url

--- a/qwanda-service-war/src/main/resources/META-INF/microprofile-config.properties
+++ b/qwanda-service-war/src/main/resources/META-INF/microprofile-config.properties
@@ -1,4 +1,4 @@
-kafka.bootstrap.servers=192.168.17.116:9092      
+kafka.bootstrap.servers=kafka:9092      
 
 # Kafka outgoing (topic = kafka)
 mp.messaging.incoming.events.connector=smallrye-kafka
