--- a/qwanda-service-war/pom.xml
+++ b/qwanda-service-war/pom.xml
@@ -77,6 +77,7 @@
 
         <hazelcast.version>3.12.2</hazelcast.version>
         <javax-cache.version>1.0.0-PFD</javax-cache.version>
+        <httpclient.version>4.5.13</httpclient.version>
     </properties>
 
     <repositories>
@@ -375,7 +376,7 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.5.2</version>
+            <version>${httpclient.version}</version>
         </dependency>
         <dependency>
             <groupId>com.googlecode.libphonenumber</groupId>
