--- a/qwanda-service-war/pom.xml
+++ b/qwanda-service-war/pom.xml
@@ -112,11 +112,11 @@
         </repository>
         <repository>
             <id>JBoss repository</id>
-            <url>http://repository.jboss.org/nexus/content/groups/public-jboss/</url>
+            <url>https://repository.jboss.org/nexus/content/groups/public-jboss/</url>
         </repository>
         <!--repository>
             <id>life.genny</id>
-            <url>http://nexus.outcome-hub.com/repository/life.genny/</url>
+            <url>https://nexus.outcome-hub.com/repository/life.genny/</url>
         </repository-->
     </repositories>
     <dependencies>
