Sending the answer to be saved through kafka

--- a/qwanda-service-war/src/main/resources/META-INF/microprofile-config.properties
+++ b/qwanda-service-war/src/main/resources/META-INF/microprofile-config.properties
@@ -78,4 +78,10 @@ mp.messaging.outgoing.servicesout.connector=smallrye-kafka
 mp.messaging.outgoing.servicesout.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 mp.messaging.outgoing.servicesout.topic=services
 
+mp.messaging.incoming.answer.connector=smallrye-kafka
+mp.messaging.incoming.answer.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
+mp.messaging.outgoing.answerout.connector=smallrye-kafka
+mp.messaging.outgoing.answerout.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.answerout.topic=answer
+mp.messaging.outgoing.answerout.max.request.size=1147483648
