--- a/qwanda-service-war/pom.xml
+++ b/qwanda-service-war/pom.xml
@@ -25,17 +25,12 @@
 
     <properties>
         <ear.name>z-ear.ear</ear.name>
-        <!--<rar.name>vertx-jca-adapter</rar.name>-->
-        <!--<rar.version>3.5.1</rar.version>-->
-        <!--<rar.file.name>${rar.name}-${rar.version}.rar</rar.file.name>-->
-        <!--<vertx.version>3.9.3</vertx.version>-->
-
         <qwanda-services.version>${revision}</qwanda-services.version>
         <genny-verticle.version>${revision}</genny-verticle.version>
 
 
-        <version.org.wildfly>22.0.1.Final</version.org.wildfly>
-        <version.wildfly-dist>22.0.1.Final</version.wildfly-dist>
+        <version.org.wildfly>24.0.0.Final</version.org.wildfly>
+        <version.wildfly-dist>24.0.0.Final</version.wildfly-dist>
  
         <version.wildfly.maven.plugin>1.2.1.Final</version.wildfly.maven.plugin>
         <compiler-plugin-version>3.1</compiler-plugin-version>
@@ -46,41 +41,26 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
 
-        <version.postgresql>9.4.1207</version.postgresql>
         <version.mysql-connector-java>8.0.21</version.mysql-connector-java>
 
-        <version.jodatime>2.7</version.jodatime>
-
-        <version.hibernate>6.0.0.Alpha8</version.hibernate>
-        <version.hibernate-validator>6.0.17.Final</version.hibernate-validator>
-        <version.hibernate.envers>5.4.6.Final</version.hibernate.envers>
-        <version.hsqldb>2.5.0</version.hsqldb>
-        <version.h2db>1.4.199</version.h2db>
-        <jackson.version>2.6.3</jackson.version>
-
-        <joda-time-version>2.8</joda-time-version>
-        <jersey.version>2.13</jersey.version>
-        <project.http.version>1.19.0</project.http.version>
-        <project.oauth.version>1.19.0</project.oauth.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <kie.version>7.34.0.Final</kie.version>
         <version.keycloak>13.0.0</version.keycloak>
 
         <version.ee7>1.0.2.Final</version.ee7>
-        <version.resteasy>3.0.10.Final</version.resteasy>
-        <version.slf4j>1.7.21</version.slf4j>
-        <version.swagger>1.5.16</version.swagger>
+        <version.resteasy>3.15.1.Final</version.resteasy>
+        <version.slf4j>1.7.32</version.slf4j>
+        <version.swagger>1.6.2</version.swagger>
 
-        <version.org.jboss.arquillian>1.1.5.Final</version.org.jboss.arquillian>
-        <version.junit>4.13.1</version.junit>
+        <version.org.jboss.arquillian>1.6.0.Final</version.org.jboss.arquillian>
+        <version.junit>4.13.2</version.junit>
 
-        <hazelcast.version>3.12.2</hazelcast.version>
-        <javax-cache.version>1.0.0-PFD</javax-cache.version>
+        <hazelcast.version>3.12.12</hazelcast.version>
         <httpclient.version>4.5.13</httpclient.version>
     </properties>
 
-    <repositories>
+    <!--repositories>
 
         <repository>
             <id>Maven repository</id>
@@ -114,11 +94,11 @@
             <id>JBoss repository</id>
             <url>https://repository.jboss.org/nexus/content/groups/public-jboss/</url>
         </repository>
-        <!--repository>
+        <repository>
             <id>life.genny</id>
             <url>https://nexus.outcome-hub.com/repository/life.genny/</url>
-        </repository-->
-    </repositories>
+        </repository>
+    </repositories-->
     <dependencies>
         <!--<dependency>-->
             <!--<groupId>io.vertx</groupId>-->
@@ -128,7 +108,7 @@
 			<dependency>
 				<groupId>io.vertx</groupId>
 				<artifactId>vertx-core</artifactId>
-				<version>3.9.3</version>
+				<version>3.9.8</version>
 				<!--<scope>provided</scope>-->
 			</dependency>
         <dependency>
@@ -189,20 +169,18 @@
 
 
         <!-- https://mvnrepository.com/artifact/org.wildfly/wildfly-ejb-client-bom -->
-        <dependency>
+        <!--dependency>
             <groupId>org.wildfly</groupId>
             <artifactId>wildfly-ejb-client-bom</artifactId>
             <version>${version.org.wildfly}</version>
-            <type>pom</type>
-        </dependency>
+        </dependency-->
 
         <!-- https://mvnrepository.com/artifact/org.wildfly/wildfly-jms-client-bom -->
-        <dependency>
+        <!--dependency>
             <groupId>org.wildfly</groupId>
             <artifactId>wildfly-jms-client-bom</artifactId>
             <version>${version.org.wildfly}</version>
-            <type>pom</type>
-        </dependency>
+        </dependency-->
 
         <dependency>
             <groupId>life.genny</groupId>
@@ -366,12 +344,12 @@
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk</artifactId>
-            <version>1.11.43</version>
+            <version>1.12.30</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-multipart-provider</artifactId>
-            <version>3.0.4.Final</version>
+            <version>4.7.0.Final</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
@@ -466,7 +444,7 @@
         <dependency>
             <groupId>org.jboss.weld</groupId>
             <artifactId>weld-core</artifactId>
-            <version>2.4.5.Final</version>
+            <version>2.4.8.Final</version>
         </dependency>
 
         <dependency>
@@ -529,32 +507,31 @@
                     <artifactId>hazelcast-client</artifactId>
                 </exclusion>
             </exclusions>
-
         </dependency>
         <dependency>
             <groupId>io.smallrye.reactive</groupId>
             <artifactId>smallrye-reactive-messaging-provider</artifactId>
-            <version>2.9.0</version>
+            <version>3.7.1</version>
         </dependency>
         <dependency>
             <groupId>io.smallrye.reactive</groupId>
             <artifactId>smallrye-reactive-messaging-kafka</artifactId>
-            <version>2.9.0</version>
+            <version>3.7.1</version>
         </dependency>
         <dependency>
             <groupId>io.smallrye.reactive</groupId>
             <artifactId>mutiny-reactive-streams-operators</artifactId>
-            <version>0.14.0</version>
+            <version>0.19.2</version>
         </dependency>
         <dependency>
             <groupId>io.smallrye.config</groupId>
             <artifactId>smallrye-config</artifactId>
-            <version>1.10.0</version>
+            <version>2.4.2</version>
         </dependency> 
         <dependency>
             <groupId>org.jboss.weld.se</groupId>
             <artifactId>weld-se-core</artifactId>
-            <version>3.1.3.Final</version>
+            <version>4.0.2.Final</version>
         </dependency>
 
     </dependencies>
@@ -579,12 +556,12 @@
             </dependency>
 
             <!-- https://mvnrepository.com/artifact/org.wildfly.bom/wildfly-javaee7 -->
-            <dependency>
+            <!--dependency>
                 <groupId>org.wildfly.bom</groupId>
                 <artifactId>wildfly-javaee7</artifactId>
                 <version>${version.org.wildfly}</version>
                 <type>pom</type>
-            </dependency>
+            </dependency-->
 
         </dependencies>
     </dependencyManagement>
